data/derived/fa15/progs/unify/prog1089.ml.out
Characters 29-44:
  let _ = assoc (-1,"william",[("ranjit",[85]);("william",23);("moose",44)]);;
                               ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string list
